Producto: fix z-index descripcion vs modal

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -906,7 +906,6 @@ ul.breadcrumbs{
           margin:0;
           padding: 0;
           height: 35px;
-          z-index:100;
           position: absolute;
           margin-top: -35px;
         }
